# pelican-events

./: .gitignore  CHANGELOG.md  README.md  _get_version.py  _pre_publish.py  pyproject.toml  tasks.py
.github/workflows/: main.yml
docs/: pre-commit-git-hook.sh
pelican/plugins/events/: __init__.py  events.py
pelican/plugins/pelican-events/: __init__.py  pelican_events.py
pelican/plugins/pelican_events/: __init__.py  pelican_events.py  test_pelican_events.py
pelican/plugins/pelican_events/tests/: t300  test_010_util_funcs.py  test_011_timestamp.py  test_020_mid_funcs.py  test_200_recurrence.py  test_500_integ.py  test_pelican_events.py  test_util_funcs.py
pelican/plugins/pelican_events/tests/t500/test_run/001/: pelicanconf.py
pelican/plugins/pelican_events/tests/t500/test_run/002/: content  pelicanconf.py  publishconf.py
